Inserção do botão 'Confirmar' no HTML e a funcionalidade no JS para alterar o comportamento do estado do elemento

--- a/index.html
+++ b/index.html
@@ -32,18 +32,19 @@
         <h2>Tarefas</h2>
         <div id="tasks">
 
-          <!-- Código para testar o style das class e as ids antes do JS
+          <!-- Código para testar o style das class e as ids antes do JS -->
               
-            <div class="task">
+            <!-- <div class="task">
             <div class="content">
               <input
                 type="text"
-                class="text"
+                class="text fulfill"
                 value="Minha tarefa importante"
                 readonly
               />
             </div>
             <div class="actions">
+              <button class="checked">Cumprida</button>
               <button class="edit">Editar</button>
               <button class="delete">Apagar</button>
             </div>
